[metadata]
name = lastfmget
version = 0.2.7
author = Derek Henderson
author_email = derekhenderson818@gmail.com
description = Last.fm API for retrieving scrobbling data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/D3r3k23/LastFmGet
project_urls =
    Documentation = https://raw.githack.com/D3r3k23/LastFmGet/master/docs/pdoc/lastfmget.html
    Discussions = https://github.com/D3r3k23/LastFmGet/discussions
    Issues = https://github.com/D3r3k23/LastFmApi/issues
    Tests = https://github.com/D3r3k23/LastFmGet/actions
license = MIT License
platform = OS Independent
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = lastfm, scrobble

[options]
python_requires = >=3
package_dir =
    = src
packages = lastfmget
install_requires =
    requests
    requests_cache
    pyyaml
